Add Go 1.22 setup step to release workflow

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -23,6 +23,12 @@ jobs:
         with:
           fetch-depth: 0
 
+      - name: Set up Go 1.22
+        uses: actions/setup-go@v5
+        with:
+          go-version: '1.22'
+
+
       - name: Prepare Release Variables
         id: vars
         uses: ignite/cli/actions/release/vars@main
