--- a/config.yml
+++ b/config.yml
@@ -2,14 +2,16 @@ version: 1
 validation: sovereign
 default_denom: uplt
 
-accounts:
-  - name: bootstrap
-    coins:
-      - 100000000uplt
+#accounts:
+#  - name: bootstrap
+#    coins:
+#      - 100000000uplt
+#  - name: imn0p
+#      - 100000000uplt
 client:
   openapi:
     path: docs/static/openapi.json
 
-validators:
-  - name: bootstrap
-    bonded: 100000000uplt
+#validators:
+#  - name: bootstrap
+#    bonded: 100000000uplt
