--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,13 +1,14 @@
-name: Release PLT
+name: Build PLT Binary
 
 on:
   push:
-    tags:
-      - "v*"
+    branches:
+      - main
+  workflow_dispatch: {}
 
 jobs:
-  build-release:
-    name: Build and Publish Binaries
+  build:
+    name: Build and Upload Binaries
     runs-on: ubuntu-latest
 
     strategy:
@@ -33,7 +34,7 @@ jobs:
           GOOS=${{ matrix.goos }} GOARCH=${{ matrix.goarch }} \
             go build -ldflags "-X github.com/cosmos/cosmos-sdk/version.Name=Plt \
               -X github.com/cosmos/cosmos-sdk/version.AppName=pltd \
-              -X github.com/cosmos/cosmos-sdk/version.Version=${GITHUB_REF_NAME}" \
+              -X github.com/cosmos/cosmos-sdk/version.Version=$(git rev-parse --short HEAD)" \
               -o dist/pltd-${{ matrix.goos }}-${{ matrix.goarch }} ./cmd/pltd
 
       - name: Generate checksums
@@ -42,10 +43,9 @@ jobs:
           sha256sum * > checksums.txt
           cd ..
 
-      - name: Upload Release Artifacts
-        uses: softprops/action-gh-release@v2
+      - name: Upload binaries as artifacts
+        uses: actions/upload-artifact@v4
         with:
-          files: dist/*
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          name: pltd-binaries
+          path: dist/*
 
